--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
     <h1>TESLA PAGE</h1>
+    <p>Al usar npm o Yarn, si tiene 100 proyectos que usan una dependencia, tendrá 100 copias 
+        de esa dependencia guardadas en el disco. Con pnpm, la dependencia se almacenará en un 
+        almacén direccionable por contenido, por lo que:</p>
     
 </body>
 </html>
